Align div blocks and content, correct font-size

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 12px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 24px;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px 10px;
+  font-size: 16px;
+  margin-bottom: 16px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  font-size: 16px;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: auto;
+  padding: 8px 24px;
+  font-size: 18px;
+  
 }
